tests/snapshots/examples_fixtures/aether__bench_reuse_enabled.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/bench_reuse_enabled.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/aether/bench_reuse_enabled.flx:36:37
   |
36 |     print("enabled: result head = #{first(mapped)}")
   |                                     ^^^^^

Hint:
  Define it first: let first = ...;
== stdout ==
<not executed>
